<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product Name category -->
    <LinearLayout
        android:id="@+id/container_product_name"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_name"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_product_name"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/activity_padding"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Input fields -->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:orientation="vertical">

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_price"
            android:hint="@string/hint_price"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_quantity"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

        <!-- Supplier Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <!-- Supplier Name field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

</LinearLayout>